# demo-reader

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
build-aux/: io.github.yalter.DemoReaderDevel.json
data/: io.github.yalter.DemoReader.desktop.in.in  io.github.yalter.DemoReader.gschema.xml.in  io.github.yalter.DemoReader.metainfo.xml.in.in  meson.build  resources.gresource.xml
data/resources/ui/: about_dialog.ui.in  window.ui.in
po/: POTFILES.in
src/: application.rs  config.rs.in  main.rs  meson.build  window.rs
